--- a/car/Dockerfile
+++ b/car/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.8.4-openjdk-17 AS builder
+FROM maven:3.9-eclipse-temurin-17 AS builder
 WORKDIR /app
 COPY ./pom.xml ./
 COPY ./src ./src
