Optimize Docker builds: Use pre-built JARs from Jenkins workspace

--- a/car/Dockerfile
+++ b/car/Dockerfile
@@ -1,11 +1,4 @@
-FROM maven:3.9-eclipse-temurin-17 AS builder
-WORKDIR /app
-COPY ./pom.xml ./
-COPY ./src ./src
-RUN mvn clean package -DskipTests
-
 FROM eclipse-temurin:17-jre
 WORKDIR /app
-ARG JAR_FILE=target/*.jar
-COPY --from=builder /app/${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+COPY target/*.jar car-service.jar
+ENTRYPOINT ["java", "-jar", "car-service.jar"]
