--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,12 +1,4 @@
-# Étape 1 : Utilisation de Maven pour construire le fichier JAR
-FROM maven:3.9-eclipse-temurin-17 AS builder
-WORKDIR /app
-COPY ./pom.xml ./
-COPY ./src ./src
-RUN mvn clean package -DskipTests
-
-# Étape 2 : Création de l'image finale avec OpenJDK
 FROM eclipse-temurin:17-jre
 WORKDIR /app
-COPY --from=builder /app/target/*.jar gateway-service.jar
-ENTRYPOINT ["java", "-jar", "/app/gateway-service.jar"]
+COPY target/*.jar gateway-service.jar
+ENTRYPOINT ["java", "-jar", "gateway-service.jar"]
